src/test/deca/syntax/valid/created/testOpArith/divideIntFloat.deca
// Description :
//    Test de la division d'un entier par un float
//
// Resultats :
//    Ok

{
    float x = 10 / 2.5;
    float y;
    y = 10 / 2.5;
}