src/test/deca/syntax/invalid/created/ReadFloat_Int/noParRead.deca
// Description :
//    Test invalide : un if sans () pour la cond
//
// Résultats :
//    Erreur Syntaxique
//    Ligne 9: extraneous input '10' expecting ')'

{
    float x =readFloat(10);
}